--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-TODO Les boucles => map() / filter() / reduce()
-TODO Le temps présent => IO
-TODO Gestions d'erreur => Either Left / Right
+TODO IO 
+TODO Future pour la connexion
